--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
     "redux": "^4.0.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.0"
-  }
+  },
+  "homepage": "https://nboddula.github.io/kraken-crypto-prices"
 }
