removing CAD currency

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "kraken-crypto-prices",
+  "name": "crypto-prices",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -21,5 +24,5 @@
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.0"
   },
-  "homepage": "https://nboddula.github.io/kraken-crypto-prices"
+  "homepage": "https://nbodd.github.io/crypto-prices"
 }
